--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ input {
   border: 1px solid gray;
   border-radius: 6px;
   position: relative;
-  width: 100%;
+  /* width: 100%; */
   font-size: 1.2rem;
   margin: 10px;
   line-height: 6ex;
@@ -52,7 +52,7 @@ label {
 #submit {
   margin: 12px;
   padding: 15px;
-  width: 100%;
+  width: 93%;
   border-radius: 6px;
   border: 1px solid #05cdf0;
   background-color: white;
@@ -67,10 +67,7 @@ label {
   color: #fff;
 }
 form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
 }
 
 #outputlabel {
